# mountain-windninja-app

./: .env.example  .gitignore  README.md  docker-compose.yml  launch  launch-client  launch-server  package-lock.json
.cursor/rules/: import-conventions.mdc  variable-naming.mdc
backend/: .dockerignore  Dockerfile  alembic.ini  config.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6434a0ff27e2_create_initial_tables.py  a1b2c3d4e5f6_make_tile_ids_nullable.py
backend/api/: deps.py  main.py
backend/api/routers/: forecast_areas.py  forecasts.py
backend/models/: __init__.py  database.py  enums.py  orm.py  schemas.py
backend/services/: solver.py  solver_config.py  solver_runner.py  storage.py  terrain.py  terrain_dem.py  terrain_geometry.py  terrain_lcp.py  weather.py  weather_hrrr.py  weather_models.py  wind_field.py
backend/tests/: conftest.py  test_forecast_areas_api.py  test_forecasts_api.py  test_integration.py  test_solver.py  test_solver_config.py  test_solver_integration.py  test_solver_runner.py  test_terrain_dem.py  test_terrain_forecast_api.py  test_terrain_geometry.py  test_terrain_integration.py  test_terrain_lcp.py  test_weather.py  test_weather_hrrr.py  test_weather_models.py  test_wind_field.py
docs/: phase1-local-validation.md  phase2-backend-design.md  phase3-frontend-design.md  project-goals.md  project-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/: main.tf
solver/: Dockerfile
(+34 files in other folders)
