[project]
name = "mountain-windninja-backend"
version = "0.1.0"
description = "Backend API for Mountain WindNinja App"
requires-python = ">=3.12"
# NOTE: keep requirements.txt in sync -- it mirrors these deps for Docker
# layer caching. See requirements.txt header for details.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "herbie-data>=2026.3",
    "rasterio>=1.4",
    "xarray>=2025.1",
    "py3dep>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
include = ["api*", "models*", "services*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
